--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
 <div id="<%= dom_id(comment) %>">
   <%= comment.content %>
-  <%= time_tag comment.updated_at %>
+  <time datetime="<%= comment.created_at.iso8601 %>"><%= comment.created_at.to_formatted_s(:long) %></time>
 </div>
