--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,11 +1,11 @@
-<h2>Comments</h2>
+<div id="comments_section" class="comments bg-black text-white p-3 rounded">
+  <h3 class="h5 text-info mb-3">Comments</h3>
 
-<div id="comments_section">
-  <div id="<%= dom_id(post, :comments) %>">
+  <div id="<%= dom_id(post, :comments) %>" class="d-flex flex-column gap-3">
     <%= render post.comments.order(created_at: :desc) %>
   </div>
-</div>
 
-<div id="new_comment_form">
-  <%= render 'comments/new', post: post %>
+  <div id="new_comment_form" class="mt-4">
+    <%= render 'comments/new', post: post %>
+  </div>
 </div>
