full broadcast  YESS works with C U D and Post.count in "post_count". awesomeness will clean it up dor tutorial before makign major changes

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
       <%= link_to "Show this post", post %>
       
 
-        <%= render 'comments/comments', post: post %>
+        <%#= render 'comments/comments', post: post %>
 
     </p>
   <% end %>
