--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,14 +1,16 @@
 <%# app/views/posts/_post.html.erb %>
+<div id="<%= dom_id(post) %>">
 
-<div class="post-card my-4 p-4 bg-dark text-light shadow rounded">
-  <div class="post-header d-flex justify-content-between align-items-center">
-    <h2 class="h4 text-info"><%= post.title %></h2>
-    <%= link_to "Show this post", post, class: "btn btn-outline-info btn-sm" %>
-  </div>
-  <div class="post-body my-3">
-    <p><%= post.body %></p>
-  </div>
-  <div class="post-comments mt-3">
+  <p>
+    <strong>Title:</strong>
+    <%= post.title %>
+  </p>
+
+  <p>
+    <strong>Body:</strong>
+    <%= post.body %>
+  <p>
+    <%= link_to "Show this post", post %>
     <%= render 'comments/comments', post: post %>
-  </div>
+  </p>
 </div>
