--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream_from @post %>
+<%= turbo_stream_from :posts_list %>
 <p style="color: green"><%= notice %></p>
 
 <%= render @post %>
