--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,14 @@
 <% content_for :title, "New post" %>
+<%= turbo_frame_tag :index_new_post_modal do %>
+  <h1>New post</h1>
 
-<h1>New post</h1>
+  <%= render "form", post: @post %>
 
-<%= render "form", post: @post %>
+  <br>
 
-<br>
+  <div>
+    <%= link_to "Back to posts", posts_path %>
+  </div>
+  <% end %>
 
-<div>
-  <%= link_to "Back to posts", posts_path %>
-</div>
+
