seperated modals, little testing, tired

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,6 +11,6 @@
   <%= button_to "Destroy this post", @post, method: :delete %>
 </div>
 
-<%= render 'comments/comments', post: @post %>
+<%#= render 'comments/comments', post: @post %>
 
 <% end %>
