modals working with real time comments in modal ! YESS FINALLY

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,8 +10,17 @@
     <strong>Body:</strong>
     <%= post.body %>
   <p>
+<%= link_to "Show this post", post_path(post), data: { turbo_frame: :show_post_modal, bs_toggle: "modal", bs_target: "#showPostModal" }, class: "btn btn-primary" %>    
+      <%= link_to "Show this post", post_path(post), data: { turbo_frame: "show_post_inside_index" } %>    
+<%#= link_to "Show this post TF", post, data: { turbo_frame: :showc} %>      
 <%= button_tag "Show in Modal", class: "btn btn-secondary show-post-modal", data: { post_id: post.id} %>    
     <%= link_to "Show this post", post %>
+    <%= controller.inspect %>
+    <% if params[:action]  == 'index' %>
     <%= render 'comments/comments', post: post %>
+    <% end %>
+    <% if params[:action]  == 'show' %>
+    <%= render 'comments/commentsx', post: post %>
+    <% end %>    
   </p>
 </div>
